--- a/src/jade/includes/form_block.jade
+++ b/src/jade/includes/form_block.jade
@@ -39,7 +39,8 @@
 							|персональных данных 
 						|*
 				.form-group.col-xs-12.text-center.submit
-					button.btn.btn-submit.icokiostom-email(type="submit")
+					button.btn.btn-white(type="submit")
+						i.icokiostom-email
 						|Записаться
 				.form-group.col-xs-12.text-center
 					span
