--- a/src/less/fonts/var_kiostom.less
+++ b/src/less/fonts/var_kiostom.less
@@ -1,5 +1,5 @@
 @font-path: "../fonts";
-
+@vers: "ye54ec";
 @icokiostom-blesk: "\e900";
 @icokiostom-caries: "\e901";
 @icokiostom-implant: "\e902";
@@ -19,4 +19,5 @@
 @icokiostom-up: "\e910";
 @icokiostom-close: "\e911";
 @icokiostom-plus: "\e912";
+@icokiostom-addres: "\e913";
 
