--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -110,3 +110,45 @@ ul {
 		}
 	}
 }
+.btn {
+	&-white {
+		transition: all .3s;
+		&, &:focus{
+			min-width: 220px;
+			font-family: 'ElektraPro', sans-serif;
+			font-size: 11px;
+			text-transform: uppercase;
+			border-radius: 20px;
+			transition: all .3s;
+			border: 2px solid transparent;
+			background-color: #fff;
+			color: #4d879d;
+			outline: 0;
+			line-height: 1;
+			padding-top: 14px;
+			padding-bottom: 12px;
+		}
+		&:hover {
+			border: 2px solid #fff;
+			background-color: #4d879d;
+			color: #fff;
+		}
+		&:before {
+			font-family: 'KiostomRu' !important;
+		}
+		[class^="icokiostom-"], [class*=" icokiostom-"] {
+			display: inline-block;
+			vertical-align: middle;
+			margin-top: -2.6px;
+			margin-right: 8px;
+		}
+	}
+}
+.col-min-12 {
+	padding-left: 15px;
+	padding-right: 15px;
+	@media(max-width: 479px){
+		width: 100%;
+		float: none;
+	}
+}
