--- a/src/jade/includes/main_page_footer.jade
+++ b/src/jade/includes/main_page_footer.jade
@@ -1,2 +1,103 @@
 footer.container-fluid.footer
-	
+	.row.footer_row
+		.container
+			.row
+				.col-md-3
+					a(href="")
+						img.logo(src="bitrix/templates/frontpage/images/kiostom_logo_white.png" alt="«КИОСТОМ»")
+					.button_wrap.row
+						.col-md-12.col-sm-6.col-xs-12.mail
+							button.btn.btn-white
+								i.icokiostom-email
+								|Записаться на приём
+						.col-md-12.col-sm-6.col-xs-12.phone
+							button.btn.btn-white
+								i.icokiostom-phone
+								|Заказать звонок
+				.col-md-9
+					.row
+						.col-sm-3.col-xs-6.col-min-12
+							h5.h5.line
+								|О компании
+							ul.menu
+								li
+									a(href="javascript:;")
+										|Новости
+								li
+									a(href="javascript:;")
+										|Статьи
+								li
+									a(href="javascript:;")
+										|Акции
+								li
+									a(href="javascript:;")
+										|Органы исполнительной власти
+								li
+									a(href="javascript:;")
+										|Отзывы
+								li
+									a(href="javascript:;")
+										|Политика конфиденциальности
+						.col-sm-3.col-xs-6.col-min-12
+							h5.h5.line
+								|Услуги
+							ul.menu
+								li
+									a(href="javascript:;")
+										|Протезирование
+								li
+									a(href="javascript:;")
+										|Имплантация
+								li
+									a(href="javascript:;")
+										|Хирургия
+								li
+									a(href="javascript:;")
+										|Лечение
+								li
+									a(href="javascript:;")
+										|Отбеливание
+						.col-sm-3.col-xs-6.col-min-12
+							h5.h5.line
+								|Цены
+							ul.menu
+								li
+									a(href="javascript:;")
+										|Терапия
+								li
+									a(href="javascript:;")
+										|Хирургия
+								li
+									a(href="javascript:;")
+										|Ортопедия
+						.col-sm-3.col-xs-6.col-min-12
+							h5.h5.line
+								|Контакты
+							ul.contacts
+								li.addres
+									|Самара, ул.Тухачевского, 88
+								li.tel
+									|Тел. в Самаре
+									br
+									|+7 (846) 247-74-04
+								li.mail
+									|kio_stom@mail.ru
+	.row
+		.container.footer-bottom
+			.row
+				.col-sm-6.col-sm-push-6.social.pt-20.pb-20
+					span
+						|ПРИСОЕДИНЯЙТЕСЬ: 
+					ul
+						li
+							a(href="javascript:;")
+								img(src="bitrix/templates/frontpage/images/ic_01.jpg" alt="")
+						li
+							a(href="javascript:;")
+								img(src="bitrix/templates/frontpage/images/ic_02.jpg" alt="")
+						li
+							a(href="javascript:;")
+								img(src="bitrix/templates/frontpage/images/ic_03.jpg" alt="")
+				.col-sm-6.col-sm-pull-6.copyright.pt-20.pb-20
+					span
+						|© КИОСТОМ 2017
