--- a/src/less/fonts/font_kiostom.less
+++ b/src/less/fonts/font_kiostom.less
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'KiostomRu';
-  src:  url('@{font-path}/KiostomRu.eot?yh73ec');
-  src:  url('@{font-path}/KiostomRu.eot?yh73ec#iefix') format('embedded-opentype'),
-    url('@{font-path}/KiostomRu.ttf?yh73ec') format('truetype'),
-    url('@{font-path}/KiostomRu.woff?yh73ec') format('woff'),
-    url('@{font-path}/KiostomRu.svg?yh73ec#KiostomRu') format('svg');
+  src:  url('@{font-path}/KiostomRu.eot?@{vers}');
+  src:  url('@{font-path}/KiostomRu.eot?@{vers}#iefix') format('embedded-opentype'),
+    url('@{font-path}/KiostomRu.ttf?@{vers}') format('truetype'),
+    url('@{font-path}/KiostomRu.woff?@{vers}') format('woff'),
+    url('@{font-path}/KiostomRu.svg?@{vers}#KiostomRu') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -119,6 +119,11 @@
 .icokiostom-plus {
   &:before {
     content: @icokiostom-plus;
+  }
+}
+.icokiostom-addres {
+  &:before {
+    content: @icokiostom-addres;
   }
 }
 
