--- a/src/less/includes/main_page_sertificats.less
+++ b/src/less/includes/main_page_sertificats.less
@@ -10,5 +10,12 @@
 			font-size: 14px;
 			color: black;
 		}
+		@media(max-width: 767px){
+			.col-sm-6 {
+				+ .col-sm-6 {
+					margin-top: 30px;;
+				}
+			}
+		}
 	}
 }
