--- a/src/less/includes/main_page_service.less
+++ b/src/less/includes/main_page_service.less
@@ -48,6 +48,7 @@
 						bottom: 0px;
 						backface-visibility: visible !important;
 						animation-duration: .3s;
+						//animation-delay: .2s;
 						animation-fill-mode: both;
 						ul, ol {
 							list-style: none;
@@ -75,6 +76,7 @@
 						z-index:20;
 						background-color: #ffffff;
 						animation-name: flipInY;
+						cursor: pointer;
 						img {
 							width: 100%;
 							height: 100%;
@@ -98,18 +100,6 @@
 							animation-name: flipInY;
 						}
 					}
-				}
-			}
-			.animate {
-				backface-visibility: visible !important;
-				animation-name: flipOutY;
-				animation-duration: .3s;
-				animation-fill-mode: both;
-			}
-			&.hover {
-				.animate {
-					animation-name: flipInY;
-					animation-duration: .3s;
 				}
 			}
 		}
