--- a/src/jade/includes/main_page_about.jade
+++ b/src/jade/includes/main_page_about.jade
@@ -109,4 +109,26 @@
 				.col-md-4
 					h3.h3.text-uppercase
 						|Отзывы наших клиентов
-					
+					.shadow
+						.reviews
+							.reviews_slider
+								.slider
+									.slider-item
+										blockquote
+											p.h4
+												|Румия Данировна
+											p.review
+												|За свою блистательную и красивую улыбку благодарна замечательному доктору-гигиенисту Саклаковой Вере Сергеевне. Еще ни в одной клинике так тщательно мне зубы не чистили. Вера Сергеевна потратила больее часа времени, но  все прошло безболезненно и комфортно. Результатом профгигиены я очень довольна. Спасибо за ваш индивидуальный подход и профессионализм!
+												br
+												|(Нафигина Р.Д. 09.11.2015.)
+											p.data.text-right
+												|13.10 2018г.
+											.avatar.icokiostom-comment
+												img.img-circle(src="bitrix/templates/frontpage/images/review_avatar.jpg" alt="")
+							.slider_arrows
+								a(href="javascript:;")
+									i.icokiostom-next
+									span
+										|ВСЕ OТЗЫВЫ
+								.arrows
+					#vk_groups
