--- a/src/jade/includes/body_scripts.jade
+++ b/src/jade/includes/body_scripts.jade
@@ -1,1 +1,2 @@
+script(type="text/javascript" src="//vk.com/js/api/openapi.js?146")
 script(type="text/javascript" src="bitrix/templates/frontpage/js/main.js")
