--- a/src/less/includes/header.less
+++ b/src/less/includes/header.less
@@ -8,7 +8,7 @@ header {
 	}
 	.head {
 		height: 95px;
-		background-image: url('@{images}bin/block_bg.png');
+		background-image: data-uri('@{images}bin/block_bg.png');
 		background-repeat: no-repeat;
 		background-position: top -154px left 40%;
 		position: relative;
