--- a/src/jade/includes/main_page_about.jade
+++ b/src/jade/includes/main_page_about.jade
@@ -109,26 +109,44 @@
 				.col-md-4
 					h3.h3.text-uppercase
 						|Отзывы наших клиентов
-					.shadow
-						.reviews
-							.reviews_slider
-								.slider
-									.slider-item
-										blockquote
-											p.h4
-												|Румия Данировна
-											p.review
-												|За свою блистательную и красивую улыбку благодарна замечательному доктору-гигиенисту Саклаковой Вере Сергеевне. Еще ни в одной клинике так тщательно мне зубы не чистили. Вера Сергеевна потратила больее часа времени, но  все прошло безболезненно и комфортно. Результатом профгигиены я очень довольна. Спасибо за ваш индивидуальный подход и профессионализм!
-												br
-												|(Нафигина Р.Д. 09.11.2015.)
-											p.data.text-right
-												|13.10 2018г.
-											.avatar.icokiostom-comment
-												img.img-circle(src="bitrix/templates/frontpage/images/review_avatar.jpg" alt="")
-							.slider_arrows
-								a(href="javascript:;")
-									i.icokiostom-next
-									span
-										|ВСЕ OТЗЫВЫ
-								.arrows
-					#vk_groups
+					.row
+						.shadow.col-md-12.col-sm-6
+							.reviews
+								.reviews_slider
+									.slider
+										.slider-item
+											blockquote
+												p.h4
+													|Румия Данировна
+												p.review
+													|За свою блистательную и красивую улыбку благодарна замечательному доктору-гигиенисту Саклаковой Вере Сергеевне. Еще ни в одной клинике так тщательно мне зубы не чистили. Вера Сергеевна потратила больее часа времени, но  все прошло безболезненно и комфортно. Результатом профгигиены я очень довольна. Спасибо за ваш индивидуальный подход и профессионализм!
+													br
+													|(Нафигина Р.Д. 09.11.2015.)
+												p.data.text-right
+													|11.09 2016г.
+												.avatar.icokiostom-comment
+													img.img-circle(src="bitrix/templates/frontpage/images/review_avatar.jpg" alt="")
+										.slider-item
+											blockquote
+												p.h4
+													|Ольга Антоновна
+												p.review
+													|Я, Акимова Ольга Антоновна, выражаю большую благодарность врачам:
+													br
+													|Косачеву Олегу Николаевичу, Невскому Денису Дмитриевичу и Косачеву Игорю Олеговичу.
+													br
+													|За своевременную и качественную работу. Ощущение своих зубов, протез не ощущается.
+													br
+													|Огромное спасибо, успехов и процветания!
+												p.data.text-right
+													|09.10 2016г.
+												.avatar.icokiostom-comment
+													img.img-circle(src="bitrix/templates/frontpage/images/review_avatar.jpg" alt="")
+								.slider_arrows
+									a(href="javascript:;")
+										i.icokiostom-next
+										span
+											|ВСЕ OТЗЫВЫ
+									.arrows
+						.col-md-12.col-sm-6
+							#vk_groups.center-block
