--- a/src/less/includes/main_page_about.less
+++ b/src/less/includes/main_page_about.less
@@ -12,7 +12,7 @@
 					display: block;
 					height: 3px;
 					background: #0b889f;
-					margin-top:  5px;
+					margin-top:	5px;
 				}
 			}
 		}
@@ -53,11 +53,10 @@
 		}
 		.reviews {
 			position: relative;
-			max-width: 376px;
-			padding-left: 30px;
-			padding-right: 30px;
+			padding-left: 25px;
+			padding-right: 25px;
 			padding-top: 30px;
-			padding-bottom: 55px;
+			padding-bottom: 30px;
 			border: 1px solid #dfdfdf;
 			background-color: #f4f4f4;
 			margin-bottom: 20px;
@@ -65,10 +64,13 @@
 				position: relative;
 				overflow: hidden;
 				width: 100%;
-				border-bottom: 1px dashed #dfdfdf;
+				border-bottom: 2px dashed #c7ccce;
 			}
 			.slider {
 				&-item {
+					padding-left: 5px;
+					padding-right: 5px;
+					outline: 0;
 					blockquote {
 						color: #487d9c;
 						font-size: 14px;
@@ -134,6 +136,49 @@
 						> span, > i {
 							display: inline-block;
 							vertical-align: middle;
+						}
+					}
+					.arrows {
+						.clearfix();
+						position: absolute;
+						right: 0px;
+						top: 13px;
+						.prev, .next {
+							font-family: 'KiostomRu' !important;
+							speak: none;
+							font-style: normal;
+							font-weight: normal;
+							font-variant: normal;
+							text-transform: none;
+							line-height: 1;
+							-webkit-font-smoothing: antialiased;
+							-moz-osx-font-smoothing: grayscale;
+							display: block;
+							width: 22px;
+							height: 22px;
+							text-align: center;
+							background-color: #dbddde;
+							color: #fff;
+							transition: all .3s;
+							float: left;
+							position: relative;
+							font-size: 10px;
+							line-height: 22px;
+							border-radius: 50%;
+							overflow: hidden;
+							cursor: pointer;
+							&:hover {
+								background-color: #606b6f;
+							}
+						}
+						.prev:before {
+							content: @icokiostom-prev;
+						}
+						.next {
+							margin-left: 5px;
+							&:before {
+								content: @icokiostom-next;
+							}
 						}
 					}
 				}
