--- a/src/less/includes/header.less
+++ b/src/less/includes/header.less
@@ -1,5 +1,7 @@
 header {
 	color: #5b6b70;
+	position: relative;
+	z-index: 400;
 	[class^="icokiostom-"], [class*=" icokiostom-"] {
 		font-size: 16px;
 		display: inline-block;
