--- a/src/less/includes/slider_block.less
+++ b/src/less/includes/slider_block.less
@@ -11,6 +11,7 @@
 				bottom: 0px;
 				left: 0px;
 				right: 0px;
+				z-index: 0;
 				.slick {
 					&-list {
 						position: relative;
@@ -125,6 +126,7 @@
 		}
 		> .container {
 			position: relative;
+			z-index: 100;
 		}
 	}
 }
