--- a/src/less/includes/slider_block_form.less
+++ b/src/less/includes/slider_block_form.less
@@ -48,6 +48,13 @@
 						padding-right: 9px;
 					}
 				}
+				.messages {
+					.success {
+						font-size: 18px;
+						margin-top: -20px;
+						margin-bottom: 20px;
+					}
+				}
 			}
 			&-group {
 				> label {
@@ -101,6 +108,9 @@
 					}
 					> input {
 						margin-right: 10px;
+						+ label {
+							display: none;
+						}
 					}
 				}
 				&.submit {
