--- a/src/less/main.less
+++ b/src/less/main.less
@@ -17,6 +17,8 @@
 @import "slick/slick.less";
 /* animate */
 @import "includes/animate.less";
+/* fancybox ajax */
+@import "includes/fancybox_ajax.less";
 /* site */
 @import "includes/header.less";
 @import "includes/main_menu.less";
