--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -143,6 +143,38 @@ ul {
 			margin-right: 8px;
 		}
 	}
+	&-blue {
+		transition: all .3s;
+		&, &:focus{
+			min-width: 220px;
+			font-family: 'ElektraPro', sans-serif;
+			font-size: 11px;
+			text-transform: uppercase;
+			border-radius: 20px;
+			transition: all .3s;
+			border: 2px solid transparent;
+			background-color: #4d879d;
+			color: #fff;
+			outline: 0;
+			line-height: 1;
+			padding-top: 14px;
+			padding-bottom: 12px;
+		}
+		&:hover {
+			border: 2px solid #4d879d;
+			background-color: #fff;
+			color: #4d879d;
+		}
+		&:before {
+			font-family: 'KiostomRu' !important;
+		}
+		[class^="icokiostom-"], [class*=" icokiostom-"] {
+			display: inline-block;
+			vertical-align: middle;
+			margin-top: -2.6px;
+			margin-right: 8px;
+		}
+	}
 }
 .col-min-12 {
 	padding-left: 15px;
