--- a/src/less/fonts/var_kiostom.less
+++ b/src/less/fonts/var_kiostom.less
@@ -1,5 +1,5 @@
 @font-path: "../fonts";
-@vers: "ye54ec";
+@vers: "i5j69l";
 @icokiostom-blesk: "\e900";
 @icokiostom-caries: "\e901";
 @icokiostom-implant: "\e902";
@@ -20,4 +20,5 @@
 @icokiostom-close: "\e911";
 @icokiostom-plus: "\e912";
 @icokiostom-addres: "\e913";
+@icokiostom-search: "\e914";
 
