--- a/src/less/main.less
+++ b/src/less/main.less
@@ -22,6 +22,7 @@
 /* site */
 @import "includes/header.less";
 @import "includes/main_menu.less";
+@import "includes/menu_search.less";
 @import "includes/slider_block.less";
 @import "includes/slider_block_form.less";
 @import "includes/main_page_service.less";
