--- a/src/less/includes/main_menu.less
+++ b/src/less/includes/main_menu.less
@@ -10,6 +10,7 @@
 		height: 44px;
 		line-height: 44px;
 		text-align: center;
+		//overflow: hidden;
 		.submenu {
 			display: block;
 			visibility: hidden;
@@ -79,7 +80,7 @@
 		> li {
 			position: relative;
 			display: inline-block;
-			margin-right: 28px;
+			margin-right: 15px;
 			height: 100%;
 			vertical-align: top;
 			a {
@@ -125,6 +126,14 @@
 			}
 			&:last-child {
 				margin-right: 0px;
+			}
+			@media(max-width: 991px){
+				margin-right: 4px;
+				> a {
+					[class^="icokiostom-"], [class*=" icokiostom-"] {
+						display: none;
+					}
+				}
 			}
 			@media(max-width: 767px){
 				display: block;
